Improves APIRevisionReader, starts work on UserInterface and final work on JSONHandler