@@ -5,29 +5,23 @@ import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 public class APIRevisionReader {
 
-    public InputStream retrieveRevisionsFromAPI(HttpURLConnection connection) throws IOException {
-        InputStream inputStream = connection.getInputStream();
-
-        return inputStream;
-    }
-
-    public HttpURLConnection connectToAPI(URL url) throws IOException {
+    public InputStream retrieveRevisionsFromAPI(URL url) throws IOException {
         HttpURLConnection stableConnection = (HttpURLConnection) url.openConnection();
         stableConnection.setRequestMethod("GET");
         stableConnection.setRequestProperty("User-Agent", "Revision Reporter/0.1 jason/yoder2@bsu.edu");
 
-        return stableConnection;
+        return stableConnection.getInputStream();
     }
 
     public URL createURL(String articleSearch) throws IOException{
-        String encodedSearch = URLEncoder.encode(articleSearch, "UTF-8");
+        String encodedSearch = URLEncoder.encode(articleSearch, StandardCharsets.UTF_8);
         String apiSearchUrl = "https://en.wikipedia.org/w/api.php?action=query&format=json&prop=revisions&titles=" +
                 encodedSearch + "&redirects=1&formatversion=2&rvprop=timestamp%7Cuser&rvlimit=15";
 
-        URL validURL = new URL(apiSearchUrl);
-        return validURL;
+        return new URL(apiSearchUrl);
     }
 }
